src/components/HomeLayout/HomeLayout-styles.less
.home-layout {
	display: flex;
	flex-direction: column;
	min-height: 100vh;

	.ant-layout-content {
		display: flex;
		flex-direction: column;
		flex: 1;
		background: var(--ant-color-bg-elevated);
		border-radius: calc(var(--ant-border-radius) * 3) 0 0 0;
		margin: 16px;
		padding: 16px;
		box-shadow: 0 0 30px rgba(130, 130, 130, 0.15);
	}

	.ant-row {
		display: flex;
		flex-wrap: wrap;
		align-content: flex-start;
	}

	.global-large-widget,
	.global-medium-widget,
	.global-little-widget {
		width: 100%;
		padding: 16px;
		border-radius: 8px;
		box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
		background: var(--ant-color-bg-container-disabled);
		margin-bottom: 16px;
	}

	.full-height {
		display: flex;
		flex-direction: column;
		flex: 1;
		.global-little-widget {
			flex: 1;
		}
	}

	.ant-statistic-title {
		margin-bottom: var(--ant-margin-xxs);
		color: var(--ant-statistic-title-font-size);
		font-size: var(--ant-statistic-title-font-size);
	}

	.event-description {
		font-weight: bold;
		font-size: 15px;
	}

	.ant-timeline-label .ant-timeline-item-label {
		position: absolute;
		inset-block-start: calc(
			(var(--ant-font-size) * var(--ant-line-height) - var(--ant-font-size)) * -1 +
				var(--ant-timeline-tail-width)
		);
		width: calc(50% - var(--ant-margin-sm));
		text-align: left;
	}

	h4.ant-typography,
	div.ant-typography-h4,
	div.ant-typography-h4 > textarea,
	.ant-typography h4 {
		margin-bottom: revert;
		color: var(--ant-color-text-heading);
		font-weight: var(--ant-font-weight-strong);
		font-size: var(--ant-font-size-heading-4);
		line-height: var(--ant-line-height-heading-4);
	}
}

